# Ataxx

./: README.md
test/: CMakeLists.txt
test/src/: AffichageJeu.cpp  AffichageJeu.h  ChooseName.cpp  ChooseName.h  Joueur.cpp  Joueur.h  MainScene.cpp  MainScene.h  Parametres.cpp  Parametres.h  game.cpp  game.h  main.cpp  pion.cpp  pion.h  plateau.cpp  plateau.h
